--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,8 @@ googleAnalytics = ""
 
 [params]
   google_analytics_id=""
+  hideFooter=false
+  includeBootstrapJs=true
 
   [params.homepage_meta_tags]
     meta_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site."
