--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ googleAnalytics = ""
   google_analytics_id=""
   hideFooter=false
   includeBootstrapJs=true
+  containerMaxWidth=1200
 
   [params.homepage_meta_tags]
     meta_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site."
@@ -31,8 +32,8 @@ googleAnalytics = ""
     weight = 2
 
 [[menu.main]]
-    name = "Sessions"
-    url = "/sessions/"
+    name = "Meetings"
+    url = "/meetings/"
     weight = 3
 
 [[menu.main]]
