Work on about page

--- a/data/objectives/objective-02.yaml
+++ b/data/objectives/objective-02.yaml
@@ -1,5 +1,5 @@
 index: "1"
 display_number: "2"
 title: "Develop innovative products and services"
-image: "/uploads/wherry-seminar-table.jpg"
+image: "/uploads/Research_Illustration.png"
 blurb: "This second objective is to redesign existing financial services to increase the positive aspects of dignity and respect while also increasing the financial returns of these new designs. Likely partners include Daisy Debt, an online platform to assist consumers whose debts are in collection; Lending Circles, administered by the Mission Asset Fund to help people establish or improve their credit; Oportun, an affordable, short-term loan provider that helps people who do not have credit scores; and FS Card, Inc., a credit card targeting underserved communities. The Network will also work with Financial Sector Deepening-Kenya to identify fruitful partnerships in Kenya and across Africa. The Network can shape design competitions run by the Keller Center at Princeton to meet the needs and privacy concerns of financial service providers. These financial tools and services will resonate with low and moderate income consumers across the globe and promote meaningful inclusion."
