--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,99 +8,101 @@ media_folder: "content/uploads" # Media files will be stored in the repo under c
 public_folder: "/uploads" # The src attribute for uploaded media will begin with this
 
 collections:
-  - label: "Home Page"
-    name: "home"
-    file: "content/_index.html"
-    fields:
-      - {label: Display Title, name: display_title, widget: string}
-      - {label: Site Description, name: description, widget: text}
-      - {label: Who We Are Block Text, name: who_we_are, widget: text}
-      - {label: News Banner Heading, name: news_banner_heading, widget: string}
-      - {label: News Banner Blurb, name: news_banner_blurb, widget: string}
-      - {label: News Banner Link, name: news_banner_link, widget: string}
-      - label: "Who We Are Image"
-        name: "who_we_are_image"
-        widget: "image"
-        default: "/uploads/wherry-group-592w.jpg"
-        media_library:
-          config:
-            multiple: false
-      - label: "Hero Image"
-        name: "hero_image"
-        widget: "image"
-        default: "/uploads/dnd-hero-3400w.jpg"
-        media_library:
-          config:
-            multiple: false
-      - label: "News Banner Image"
-        name: "news_banner_image"
-        widget: "image"
-        default: "/uploads/wherry-seminar-table.png"
-        media_library:
-          config:
-            multiple: false
-  - label: "About Page"
-    name: "about"
-    file: "content/about/_index.html"
-    fields:
-      - {label: Display Title, name: display_title, widget: string}
-      - {label: Intro, name: intro, widget: text}
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
-        buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
-      - label: "Image"
-        name: "image"
-        widget: "image"
-        default: "/uploads/wherry-group-2-1484w.jpg"
-        media_library:
-          config:
-            multiple: false
-      - label: "Hero Image"
-        name: "hero_image"
-        widget: "image"
-        default: "/uploads/close_up_2_men.jpg"
-        media_library:
-          config:
-            multiple: false
-      - label: "Director Bio Image"
-        name: "bio_image"
-        widget: "image"
-        default: "/uploads/ffwherry_bio.jpg"
-        media_library:
-          config:
-            multiple: false
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
-        buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
-  - label: "Projects Page"
-    name: "projects"
-    file: "content/projects/_index.html"
-    fields:
-      - label: "Hero Image"
-        name: "hero_image"
-        widget: "image"
-        default: "/uploads/projects-streetscene.jpg"
-        media_library:
-          config:
-            multiple: false
-  - label: "Social Media Metadata"
-    name: "social"
-    file: "content/data/social.yaml"
-    fields:
-      - {label: Social Description, name: social_description, widget: text}
-      - label: "Social Image"
-        name: "social_image"
-        widget: "image"
-        default: "/uploads/wherry-seminar-table.jpg"
-        media_library:
-          config:
-            multiple: false
-      - {label: Facebook Link, name: facebook_link, widget: string}
-      - {label: Twitter Link, name: twitter_via, widget: string}
-      - {label: LinkedIn Link, name: linkedin_link, widget: string}
-      - {label: Instagram Link, name: instagram_link, widget: string}
+  - label: "Individual Pages"
+    name: "pages"
+    - label: "Home Page"
+      name: "home"
+      file: "content/_index.html"
+      fields:
+        - {label: Display Title, name: display_title, widget: string}
+        - {label: Site Description, name: description, widget: text}
+        - {label: Who We Are Block Text, name: who_we_are, widget: text}
+        - {label: News Banner Heading, name: news_banner_heading, widget: string}
+        - {label: News Banner Blurb, name: news_banner_blurb, widget: string}
+        - {label: News Banner Link, name: news_banner_link, widget: string}
+        - label: "Who We Are Image"
+          name: "who_we_are_image"
+          widget: "image"
+          default: "/uploads/wherry-group-592w.jpg"
+          media_library:
+            config:
+              multiple: false
+        - label: "Hero Image"
+          name: "hero_image"
+          widget: "image"
+          default: "/uploads/dnd-hero-3400w.jpg"
+          media_library:
+            config:
+              multiple: false
+        - label: "News Banner Image"
+          name: "news_banner_image"
+          widget: "image"
+          default: "/uploads/wherry-seminar-table.png"
+          media_library:
+            config:
+              multiple: false
+    - label: "About Page"
+      name: "about"
+      file: "content/about/_index.html"
+      fields:
+        - {label: Display Title, name: display_title, widget: string}
+        - {label: Intro, name: intro, widget: text}
+        - label: "Body"
+          name: "body"
+          widget: "markdown"
+          buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
+        - label: "Image"
+          name: "image"
+          widget: "image"
+          default: "/uploads/wherry-group-2-1484w.jpg"
+          media_library:
+            config:
+              multiple: false
+        - label: "Hero Image"
+          name: "hero_image"
+          widget: "image"
+          default: "/uploads/close_up_2_men.jpg"
+          media_library:
+            config:
+              multiple: false
+        - label: "Director Bio Image"
+          name: "bio_image"
+          widget: "image"
+          default: "/uploads/ffwherry_bio.jpg"
+          media_library:
+            config:
+              multiple: false
+        - label: "Body"
+          name: "body"
+          widget: "markdown"
+          buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
+    - label: "Projects Page"
+      name: "projects"
+      file: "content/projects/_index.html"
+      fields:
+        - label: "Hero Image"
+          name: "hero_image"
+          widget: "image"
+          default: "/uploads/projects-streetscene.jpg"
+          media_library:
+            config:
+              multiple: false
+    - label: "Social Media Metadata"
+      name: "social"
+      file: "content/data/social.yaml"
+      fields:
+        - {label: Social Description, name: social_description, widget: text}
+        - label: "Social Image"
+          name: "social_image"
+          widget: "image"
+          default: "/uploads/wherry-seminar-table.jpg"
+          media_library:
+            config:
+              multiple: false
+        - {label: Facebook Link, name: facebook_link, widget: string}
+        - {label: Twitter Link, name: twitter_via, widget: string}
+        - {label: LinkedIn Link, name: linkedin_link, widget: string}
+        - {label: Instagram Link, name: instagram_link, widget: string}
   - label: "People"
     name: "people"
     folder: "data/people"
