--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,198 @@ media_folder: "content/uploads" # Media files will be stored in the repo under c
 public_folder: "/uploads" # The src attribute for uploaded media will begin with this
 
 collections:
+  - label: "Individual Pages"
+    name: "pages"
+    files:
+      - label: "Home Page"
+        name: "home"
+        file: "content/_index.html"
+        fields:
+          - {label: Display Title, name: display_title, widget: string}
+          - {label: Site Description, name: description, widget: text}
+          - {label: Who We Are Block Text, name: who_we_are, widget: text}
+          - {label: News Banner Heading, name: news_banner_heading, widget: string}
+          - {label: News Banner Blurb, name: news_banner_blurb, widget: string}
+          - {label: News Banner Link, name: news_banner_link, widget: string}
+          - label: "Who We Are Image"
+            name: "who_we_are_image"
+            widget: "image"
+            default: "/uploads/wherry-group-592w.jpg"
+            media_library:
+              config:
+                multiple: false
+          - label: "Hero Image"
+            name: "hero_image"
+            widget: "image"
+            default: "/uploads/dnd-hero-3400w.jpg"
+            media_library:
+              config:
+                multiple: false
+          - label: "News Banner Image"
+            name: "news_banner_image"
+            widget: "image"
+            default: "/uploads/wherry-seminar-table.png"
+            media_library:
+              config:
+                multiple: false
+      - label: "About Page"
+        name: "about"
+        file: "content/about/_index.html"
+        fields:
+          - {label: Display Title, name: display_title, widget: string}
+          - {label: Intro, name: intro, widget: text}
+          - label: "Body"
+            name: "body"
+            widget: "markdown"
+            buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
+          - label: "Image"
+            name: "image"
+            widget: "image"
+            default: "/uploads/wherry-group-2-1484w.jpg"
+            media_library:
+              config:
+                multiple: false
+          - label: "Hero Image"
+            name: "hero_image"
+            widget: "image"
+            default: "/uploads/close_up_2_men.jpg"
+            media_library:
+              config:
+                multiple: false
+          - label: "Director Bio Image"
+            name: "bio_image"
+            widget: "image"
+            default: "/uploads/ffwherry_bio.jpg"
+            media_library:
+              config:
+                multiple: false
+          - label: "Body"
+            name: "body"
+            widget: "markdown"
+            buttons: ["bold", "italic", "code", "link", "quote", "code-block", "bulleted-list", "numbered-list"]
+      - label: "Projects Page"
+        name: "projects"
+        file: "content/projects/_index.html"
+        fields:
+          - label: "Hero Image"
+            name: "hero_image"
+            widget: "image"
+            default: "/uploads/projects-streetscene.jpg"
+            media_library:
+              config:
+                multiple: false
+      - label: "Social Media Metadata"
+        name: "social"
+        file: "content/data/social.yaml"
+        fields:
+          - {label: Social Description, name: social_description, widget: text}
+          - label: "Social Image"
+            name: "social_image"
+            widget: "image"
+            default: "/uploads/wherry-seminar-table.jpg"
+            media_library:
+              config:
+                multiple: false
+          - {label: Facebook Link, name: facebook_link, widget: string}
+          - {label: Twitter Link, name: twitter_via, widget: string}
+          - {label: LinkedIn Link, name: linkedin_link, widget: string}
+          - {label: Instagram Link, name: instagram_link, widget: string}
+  - label: "Objectives"
+      name: "objecties"
+      files:
+        - name: "objective-01"
+          label: "Objective 1"
+          file: "data/objectives/objective-01.yml"
+          extension: "yml"
+          fields:
+            fields:
+              - label: "Index (zero-based display order)"
+                name: "index"
+                widget: "number"
+                default: 0
+                valueType: "int"
+                min: 0
+                max: 2
+                step: 1
+              - label: "Display Number"
+                name: "display_number"
+                widget: "number"
+                default: 1
+                valueType: "int"
+                min: 1
+                max: 3
+                step: 1
+              - {label: Title, name: title, widget: string}
+              - label: "Icon"
+                name: "image"
+                widget: "image"
+                default: "/uploads/Research_Illustration.png"
+                media_library:
+                  config:
+                    multiple: false
+              - {label: blurb, name: blurb, widget: text}
+        - name: "objective-02"
+          label: "Objective 2"
+          file: "data/objectives/objective-02.yml"
+          extension: "yml"
+          fields:
+            fields:
+              - label: "Index (zero-based display order)"
+                name: "index"
+                widget: "number"
+                default: 0
+                valueType: "int"
+                min: 0
+                max: 2
+                step: 1
+              - label: "Display Number"
+                name: "display_number"
+                widget: "number"
+                default: 1
+                valueType: "int"
+                min: 1
+                max: 3
+                step: 1
+              - {label: Title, name: title, widget: string}
+              - label: "Icon"
+                name: "image"
+                widget: "image"
+                default: "/uploads/Research_Illustration.png"
+                media_library:
+                  config:
+                    multiple: false
+              - {label: blurb, name: blurb, widget: text}
+        - name: "objective-03"
+          label: "Objective 3"
+          file: "data/objectives/objective-03.yml"
+          extension: "yml"
+          fields:
+            fields:
+              - label: "Index (zero-based display order)"
+                name: "index"
+                widget: "number"
+                default: 0
+                valueType: "int"
+                min: 0
+                max: 2
+                step: 1
+              - label: "Display Number"
+                name: "display_number"
+                widget: "number"
+                default: 1
+                valueType: "int"
+                min: 1
+                max: 3
+                step: 1
+              - {label: Title, name: title, widget: string}
+              - label: "Icon"
+                name: "image"
+                widget: "image"
+                default: "/uploads/Research_Illustration.png"
+                media_library:
+                  config:
+                    multiple: false
+              - {label: blurb, name: blurb, widget: text}
   - label: "People"
     name: "people"
     folder: "data/people"
@@ -28,7 +220,7 @@ collections:
           config:
             multiple: false
   - label: "About Page Objectives"
-    name: "objectives"
+    name: "test_objectives"
     folder: "data/objectives"
     create: false
     extension: "yml"
