--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,7 +49,6 @@ collections:
         extension: "md"
         fields:
           - {label: Display Title, name: display_title, widget: string}
-          - {label: Intro, name: intro, widget: text}
           - label: "Body"
             name: "body"
             widget: "markdown"
@@ -231,6 +230,8 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+
+      - {label: "Is Index", name: "is_index", widget: "hidden", default: false}
 
       - label: "Description"
         name: "description"
