--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -223,7 +223,7 @@ collections:
   - label: "Project Items"
     name: "projects" # Used in routes, e.g., /admin/collections/blog
     folder: "content/projects" # The path to the folder where the documents are stored
-    filter: {field: "is_index", value: "false"}
+    filter: {field: "is_index", value: false}
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
