--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ media_folder: "content/uploads" # Media files will be stored in the repo under c
 public_folder: "/uploads" # The src attribute for uploaded media will begin with this
 
 collections:
-  - label: "Individual Pages"
+  - label: "Individual Pages & Settings"
     name: "pages"
     files:
       - label: "Home Page"
